// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container component Should have container classname 1`] = `
<div
  className="container"
  style={Object {}}
>
  <p
    className="bd-notification is-success"
  >
    <p>
      Default
    </p>
    <p>
      Container
    </p>
  </p>
</div>
`;

exports[`Container component Should have helper classnames 1`] = `
<div
  className="container is-paddingless is-block-widescreen-only is-flex-touch is-hidden-desktop"
  style={Object {}}
>
  <p
    className="bd-notification is-success"
  >
    <p>
      Default
    </p>
    <p>
      Container
    </p>
  </p>
</div>
`;
